# ghost-legacy

./: .cirrus.yml  .gitignore  .travis.yml  CODEOWNERS  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  SECURITY.md  configure.ac  libghostconsensus.pc.in  libparticlconsensus.pc.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  adapter.cpp  adapter.h  amount.h  anon.cpp  anon.h  base58.cpp  base58.h  batchedlogger.cpp  batchedlogger.h  bech32.cpp  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  blind.cpp  blind.h  blockencodings.cpp  blockencodings.h  blockfilter.cpp  blockfilter.h  bloom.cpp  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsimport.h  chainparamsseeds.h  (+79 more)
src/bench/: .gitignore  bench.cpp  bench.h  blind.cpp  block_assemble.cpp  ccoins_caching.cpp  ghost_add_tx.cpp  mlsag.cpp  particl_add_tx.cpp  rpc_blockchain.cpp  verify_script.cpp
src/bls/: bls.h
src/chain/: chainparamsimport.h  ct_tainted.h  tx_blacklist.h  tx_whitelist.h
src/coldreward/: blockheightrange.cpp  blockheightrange.h  coldrewardtracker.cpp  coldrewardtracker.h
src/coldrewards/: coinreward.h  rewards.cpp  rewards.h  rewards_calculation.cpp  rewards_calculation.h  rewardsview.cpp  rewardsview.h
src/consensus/: consensus.h  merkle.cpp  params.h  tx_check.cpp  tx_check.h  tx_verify.cpp  tx_verify.h  validation.h
src/evo/: cbtx.cpp  deterministicmns.cpp  deterministicmns.h  mnauth.cpp  providertx.cpp  providertx.h  simplifiedmns.cpp  simplifiedmns.h  specialtx.cpp
src/gvr/: monitor.cpp  monitor.h  payee.cpp  payee.h  pool.cpp  pool.h  util.cpp  util.h
src/index/: base.cpp  base.h  txindex.cpp  txindex.h
src/insight/: addressindex.h  balanceindex.h  csindex.h  insight.cpp  insight.h  rpc.cpp  rpc.h  spentindex.h  timestampindex.h
src/interfaces/: chain.cpp  chain.h  node.cpp  node.h  wallet.cpp  wallet.h
src/key/: extkey.cpp  extkey.h  keyutil.cpp  keyutil.h  mnemonic.cpp  mnemonic.h  stealth.cpp  stealth.h  types.h
src/llmq/: quorums.cpp  quorums.h  quorums_blockprocessor.cpp  quorums_blockprocessor.h  quorums_chainlocks.cpp  quorums_commitment.cpp  quorums_commitment.h  quorums_debug.cpp  quorums_dkgsessionhandler.cpp  quorums_dkgsessionmgr.cpp  quorums_dkgsessionmgr.h  quorums_init.cpp  quorums_init.h  quorums_signing.cpp  quorums_signing.h  quorums_signing_shares.cpp  quorums_signing_shares.h  quorums_utils.cpp  quorums_utils.h
src/masternode/: activemasternode.cpp  masternode-payments.cpp  masternode-payments.h  masternode-sync.cpp  masternode-utils.cpp
src/node/: coinstats.cpp  coinstats.h  transaction.cpp  transaction.h  ui_interface.cpp  ui_interface.h
src/policy/: feerate.cpp  feerate.h  fees.cpp  fees.h  policy.cpp  policy.h  settings.h
src/pos/: diffalgo.cpp  diffalgo.h  kernel.cpp  kernel.h  miner.cpp  miner.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: Makefile  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bitcoin.cpp  bitcoin.h  bitcoin.qrc  bitcoin_locale.qrc  bitcoinaddressvalidator.cpp  bitcoinaddressvalidator.h  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coldstakingdialog.cpp  coldstakingdialog.h  createwalletdialog.cpp  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  macnotificationhandler.mm  main.cpp  masternodelist.cpp  masternodelist.h  mnemonicdialog.cpp  mnemonicdialog.h  networkstyle.cpp  openuridialog.cpp  optionsdialog.cpp  (+32 more)
src/rpc/: anon.cpp  blockchain.cpp  blockchain.h  client.cpp  masternode.cpp  mining.cpp  misc.cpp  mnemonic.cpp  net.cpp  rawtransaction.cpp  rawtransaction_util.cpp  rawtransaction_util.h  register.h  request.h  rpcevo.cpp  rpcquorums.cpp  rpcutil.cpp  rpcutil.h  server.cpp  server.h  util.cpp  util.h
src/script/: bitcoinconsensus.cpp  descriptor.cpp  ghostconsensus.h  interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  particlconsensus.h  script.cpp  script.h  sigcache.h  sign.cpp  sign.h  signingprovider.cpp  signingprovider.h  standard.cpp  standard.h
src/secp256k1/: .travis.yml  Makefile.am  configure.ac
src/smsg/: crypter.cpp  crypter.h  db.cpp  db.h  keystore.cpp  keystore.h  net.h  rpcsmessage.cpp  rpcsmessage.h  smessage.cpp  smessage.h
src/test/: amount_tests.cpp  base58_tests.cpp  bech32_tests.cpp  bip32_tests.cpp  blockencodings_tests.cpp  blockfilter_index_tests.cpp  blockfilter_tests.cpp  bswap_tests.cpp  coins_tests.cpp  coldreward_tests.cpp  ct_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  denialofservice_tests.cpp  extkey_tests.cpp  ghostchain_tests.cpp  key_tests.cpp  main.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  mnemonic_tests.cpp  multisig_tests.cpp  net_tests.cpp  particlchain_tests.cpp  pow_tests.cpp  ringct_tests.cpp  rpc_tests.cpp  script_p2pkh_tests.cpp  script_p2sh_tests.cpp  script_standard_tests.cpp  script_tests.cpp  serialize_tests.cpp  setup_common.cpp  setup_common.h  sighash_tests.cpp  sigopcount_tests.cpp  smsg_tests.cpp  stealth_tests.cpp  streams_tests.cpp  (+11 more)
src/unilib/: uninorms.cpp  utf8.h
src/usbdevice/: debugdevice.cpp  debugdevice.h  ledgerdevice.cpp  ledgerdevice.h  rpcusbdevice.cpp  rpcusbdevice.h  trezordevice.cpp  trezordevice.h  usbdevice.cpp  usbdevice.h  usbwrapper.cpp  usbwrapper.h
src/util/: fees.cpp  fees.h  message.cpp  message.h  string.cpp  string.h  system.cpp  system.h  threadnames.cpp  time.cpp  time.h  ui_change_type.h  url.cpp
src/wallet/: bdb.cpp  bdb.h  coincontrol.cpp  coincontrol.h  coinselection.h  crypter.cpp  crypter.h  db.cpp  db.h  feebumper.cpp  feebumper.h  fees.cpp  hdwallet.cpp  hdwallet.h  hdwalletdb.cpp  hdwalletdb.h  hdwallettypes.cpp  init.cpp  (+19 more)
(+465 files in other folders)
